Lesson 6 (golangci.yaml modified)

--- a/Lesson_6/.golangci.yml
+++ b/Lesson_6/.golangci.yml
@@ -130,9 +130,13 @@ issues:
       text: "SA1019: e.cfg.Run.Deadline is deprecated: Deadline exists for historical compatibility and should not be used."
 
 run:
-  timeout: 5m
+  concurrency: 4
+  skip-dirs-use-default: true
+  timeout: 1m
   skip-dirs:
     - test/testdata_etc
     - internal/cache
     - internal/renameio
     - internal/robustio
+  tests: false
+
