--- a/Lesson_6/.golangci.yml
+++ b/Lesson_6/.golangci.yml
@@ -66,7 +66,7 @@ linters:
   enable:
     - bodyclose
     - deadcode
-    - depguard
+    #- depguard
     - dogsled
     - dupl
     - errcheck
@@ -78,7 +78,7 @@ linters:
     - gocyclo
     - gofmt
     - goimports
-    - gomnd
+    #- gomnd
     - goprintffuncname
     - gosec
     - gosimple
